Wed Aug 04 23:07:46 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: make window titles saner

Wed Aug 04 22:33:46 2004  George Lebl <jirka@5z.com>

	* src/gnome-genius.[ch], src/graphing.c: some cleanup on the line
	  plotting stuff, don't draw outside the box, etc...

	* src/graphing.c, src/mpwrap.[ch]: Add surface plotting, only one
	  function at a time and can take one or two arguments (complex
	  number or x and y).  Added both a dialog entry method and a
	  SurfacePlot function

	* configure.in: now it merits to raise version to 0.7.0

Wed Aug 04 17:27:08 2004  George Lebl <jirka@5z.com>

	* gui/gnome-genius.[ch], gui/graphing.c: implement the printing
	  and ps/eps export at least in a rudimentary way.

	* gui/gnome-genius.[ch]: fix the "file exists" dialogs, they were
	  reversed on save, and on load the "can't open" dialog was wrong.

Wed Aug 04 17:27:06 2004  George Lebl <jirka@5z.com>

	* gtkextra/*, configure.in: import some files from gtkextra-2 for the
	  GtkPlot* and friends

	* src/gnome-genius.[ch], src/graphing.c: whack the old graphing
	  nonsense and use gtkextra gtkplot.  Right now it has no added
	  functionality over the old plotting, but it looks different.
	  However we will have PS/EPS export and printing pretty easily
	  now and further we can now easily also add parametric and surface
	  plots and flows and such.

Thu Jul 29 09:55:10 2004  George Lebl <jirka@5z.com>

	* src/eval.[ch]: Allocate all memory for GelETree's, and the
	  various loop structures in long continuous spaces with the
	  structures aligned properly.  This seems to have little
	  impact on speed but it has some impact on memory usage, about
	  20% in a test that uses deep recursion.  As a side effect the
	  free lists are no longer purged.  Also fix the MEM_DEBUG_FRIENDLY
	  mode to actually free memory unless the MEM_DEBUG_SUPER_FRIENDLY
	  is on.

	* configure.in: automatically turn on -O3 for gcc, this seems