@@ -614,4 +614,6 @@ false == true							false
 0 == true							false
 true == 0							false
 false == 0							true
+|cos(pi+0.1i) +1| < 0.1						true
+|sin(pi+0.1i)| < 0.11						true
 load "longtest.gel"						true
