@@ -1,3 +1,7 @@
+Thu Aug 05 00:52:15 2004  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: sin, cos, sinh, cosh were wrong for complex arguments
+
 Wed Aug 04 23:07:46 2004  George Lebl <jirka@5z.com>
 
 	* src/graphing.c: make window titles saner
